# cgr-raytracer

./: CMakeLists.txt  README.md  main.cpp
include/: bvh.h  hit.h  raytracer_app.h  scene.h  shape.h
include/lights/: light.h
include/materials/: blinn-phong-material.h  material.h
include/math/: camera.h  color.h  matrix3x3.h  ray.h  utils.h  vec3.h
include/shapes/: aabb.h  cube.h  moving-sphere.h  plane.h  shape-factory.h  shape.h  sphere.h
include/utils/: args-parser.h  image.h  json.h  logger.h  ppm_image.h
include/utils/json/: json.h  json_value.h
lib/: raytracer_app.cpp  scene.cpp
lib/materials/: blinn-phong-material.cpp
lib/math/: camera.cpp  color.cpp  ray.cpp  vec3.cpp
lib/shapes/: aabb.cpp  cube.cpp  moving-sphere.cpp  plane.cpp  shape-factory.cpp  sphere.cpp
lib/utils/: args-parser.cpp  logger.cpp  ppm_image.cpp
test/: CMakeLists.txt  camera-test.cpp  matrix3x3-test.cpp  vec3-test.cpp
